--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                     <button id="openBottleGallery" class="group px-8 py-3.5 bg-gradient-to-r from-[#C9A84C] to-[#E8D48B] text-[#0A1628] font-semibold rounded-full text-sm tracking-wide transition-all duration-300 hover:shadow-[0_0_30px_rgba(201,168,76,0.3)] hover:scale-105">
                         Customize Your Bottle
                     </button>
-                    <button class="px-8 py-3.5 border border-white/20 text-white rounded-full text-sm tracking-wide transition-all duration-300 hover:bg-white/5 hover:border-white/40">
+                    <a class="px-8 py-3.5 border border-white/20 text-white rounded-full text-sm tracking-wide transition-all duration-300 hover:bg-white/5 hover:border-white/40" href="#occasions">
                         Explore Occasions
-                    </button>
+                    </a>
                 </div>
             </div>
             
