--- a/index.html
+++ b/index.html
@@ -541,10 +541,11 @@
             <div class="max-w-6xl mx-auto px-6">
                 <div class="flex flex-col md:flex-row items-center justify-between gap-4">
                     <div class="flex items-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-droplets w-5 h-5 text-[#C9A84C]">
-                            <path d="M7 16.3c2.2 0 4-1.83 4-4.05 0-1.16-.57-2.26-1.71-3.19S7.29 6.75 7 5.3c-.29 1.45-1.14 2.84-2.29 3.76S3 11.1 3 12.25c0 2.22 1.8 4.05 4 4.05z"></path>
-                            <path d="M12.56 6.6A10.97 10.97 0 0 0 14 3.02c.5 2.5 2 4.9 4 6.5s3 3.5 3 5.5a6.98 6.98 0 0 1-11.91 4.97"></path>
-                        </svg>
+                        <img 
+                            src="udayra-logo.png" 
+                                        alt="Udayra Logo" 
+                                        class="w-5 h-5 text-[#C9A84C]"/>
+
                         <span class="text-white font-bold text-lg tracking-tight">UDAYRA</span>
                     </div>
                     <p class="text-gray-500 text-sm">© 2026 UDAYRA. All rights reserved.</p>
