--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                                     </div>
                                     <div>
                                         <p class="text-sm text-gray-500">Phone / WhatsApp</p>
-                                        <p class="font-medium text-[#0A1628]">+91 XXXXX XXXXX</p>
+                                        <p class="font-medium text-[#0A1628]">+91 92368 87932</p>
                                     </div>
                                 </div>
                                 <div class="flex items-start gap-4">
@@ -455,7 +455,7 @@
                                     </div>
                                     <div>
                                         <p class="text-sm text-gray-500">Email</p>
-                                        <p class="font-medium text-[#0A1628]">hello@udayra.com</p>
+                                        <p class="font-medium text-[#0A1628]">udayracustom@gmail.com</p>
                                     </div>
                                 </div>
                                 <div class="flex items-start gap-4">
@@ -467,7 +467,7 @@
                                     </div>
                                     <div>
                                         <p class="text-sm text-gray-500">Location</p>
-                                        <p class="font-medium text-[#0A1628]">India</p>
+                                        <p class="font-medium text-[#0A1628]">Pal Tiraha, Alamnagar, Lucknow, India</p>
                                     </div>
                                 </div>
                             </div>
@@ -550,8 +550,8 @@
                     </div>
                     <p class="text-gray-500 text-sm">© 2026 UDAYRA. All rights reserved.</p>
                     <div class="flex items-center gap-6">
-                        <a href="#" class="text-gray-500 text-sm hover:text-[#C9A84C] transition-colors">Instagram</a>
-                        <a href="#" class="text-gray-500 text-sm hover:text-[#C9A84C] transition-colors">WhatsApp</a>
+                        <a href="https://www.instagram.com/udayracustoms?igsh=MXJ0NXY0amFqZ3Btcw==" class="text-gray-500 text-sm hover:text-[#C9A84C] transition-colors">Instagram</a>
+                        <a href="mailto:udayracustom@gmail.com" class="text-gray-500 text-sm hover:text-[#C9A84C] transition-colors">G-Mail</a>
                     </div>
                 </div>
             </div>
