--- a/index.html
+++ b/index.html
@@ -620,6 +620,7 @@
       <img src="corporate-event.png" class="thumb cursor-pointer rounded border">
       <img src="Hotel-event.png" class="thumb cursor-pointer rounded border">
       <img src="restaurant-event.png" class="thumb cursor-pointer rounded border">
+      <img src="junction-chai.png" class="thumb cursor-pointer rounded border">
     </div>
 
   </div>
