--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>UDAYRA - Premium Alkaline Water</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+      <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="udayra-logo.png">
+
 </head>
 <body class="bg-gray-900">
     <!-- Navigation Header -->
